--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "autoprefixer": "^10.0.0",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "next": "^14.0.0",
+    "postcss": "^8.0.0",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
