--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.0.0",
+    "autoprefixer": "^10.0.0",
+    "postcss": "^8.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
@@ -25,14 +28,11 @@
     "@types/node": "^20.17.57",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
-    "autoprefixer": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0",
     "msw": "^2.9.0",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^3.0.0",
     "ts-jest": "^29.3.4",
     "typescript": "^5.8.3"
   }
