--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/node": "^20.17.57",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "next": "^14.0.0",
@@ -19,21 +22,18 @@
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.0",
     "autoprefixer": "^10.0.0",
-    "postcss": "^8.0.0"
+    "postcss": "^8.0.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.17.57",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0",
     "msw": "^2.9.0",
-    "ts-jest": "^29.3.4",
-    "typescript": "^5.8.3"
+    "ts-jest": "^29.3.4"
   }
 }
